--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,10 @@ pywinctl>=0.4
 schedule>=1.2
 requests>=2.32
 python-dotenv>=1.0
-browser-history>=0.6
+browser-history>=0.5.0
 pyperclip>=1.8
 datasette>=0.64
 # Phase 7: Desktop character agent
 PyQt6>=6.4
+rlottie-python
+Pillow
